--- a/docs/fhatos.adoc
+++ b/docs/fhatos.adoc
@@ -88,7 +88,7 @@ $ fhatos --boot:config=../conf/boot-loader.obj
       .oO loading system objs Oo.
 [INFO]  [/sys/scheduler] scheduler started
 [INFO]  [/sys/router] router started
-[INFO]  [/sys/router] main memory [total=>6912]
+[INFO]  [/sys/router] main memory [total=>5760]
 [INFO]  [/sys/router] heap <none> spanning /sys/# mounted
 [INFO]  [/sys/router] heap <none> spanning /mnt/# mounted
 [INFO]  [/sys/router] heap /mnt/boot spanning /boot/# mounted
@@ -182,13 +182,13 @@ The [.h]#scheduler# controls and provides access to the various *processes* that
 ----
 fhatos> */sys/scheduler
 >[
-==>thread=>[
-=>]
 ==>config=>[
 ===>def_stack_size=>8096
 =>]
+==>thread=>[
+=>]
 ==>::=>[
-===>spawn=>spawn?obj<=obj{?}(thread=>_)[cpp]
+===>spawn=>spawn?obj<=obj{?}(_)[cpp]
 =>]
 >]@/sys/scheduler
 ----
@@ -214,18 +214,6 @@ The [.h]#router# is responsible for storing and retrieving `objs` from a pool of
 ----
 fhatos> */sys/router
 >[
-==>structure=>[
-===>/sys/#
-===>/mnt/#
-===>/boot/#
-===>/fos/#
-===>/mmadt/#
-===>/io/#
-===>+/#
-===>/disk/#
-===>/shared/#
-===>/bus/#
-=>]
 ==>frame=>[rec][_]
 ==>config=>[
 ===>resolve=>[
@@ -263,6 +251,18 @@ fhatos> */sys/router
 ====>sub=>sub?obj{?}<=obj()[cpp]
 ==>]
 =>]
+==>structure=>[
+===>/sys/#
+===>/mnt/#
+===>/boot/#
+===>/fos/#
+===>/mmadt/#
+===>/io/#
+===>+/#
+===>/disk/#
+===>/shared/#
+===>/bus/#
+=>]
 >]@/sys/router
 ----
 
@@ -283,11 +283,8 @@ The [.h]#mmADT# language is embedded in the fURI address space thus enabling htt
 ----
 fhatos> */mmadt/#/
 >[
-==>/mmadt/a=>a(_)[cpp]
-==>/mmadt/apply=>apply?obj{*}<=obj(rhs=>noobj,args=>[=>])[cpp]
-==>/mmadt/as=>as(isa(/mmadt/uri))[cpp]
+==>/mmadt/as=>as(type?uri=>_)[cpp]
 ==>/mmadt/at=>at?obj{?}<=obj{?}(isa(/mmadt/uri))[cpp]
-==>/mmadt/back=>back?obj{?}<=obj()[cpp]
 ==>/mmadt/barrier=>barrier?objs{*}<=objs{*}(_)[cpp]
 ==>/mmadt/bcode=>[bcode][_]
 ==>/mmadt/bcode/::/mmadt/inspect=>inspect(_)[cpp]
@@ -306,7 +303,7 @@ fhatos> */mmadt/#/
 ==>/mmadt/div=>div(_)
 ==>/mmadt/drop=>drop?obj{?}<=obj{?}(isa(/mmadt/obj))[cpp]
 ==>/mmadt/each=>each(isa(/mmadt/obj))
-==>/mmadt/else=>else?obj{?}<=obj{?}(_)[cpp]
+==>/mmadt/else=>else?obj<=obj{?}(_)[cpp]
 ==>/mmadt/embed=>embed()[cpp]
 ==>/mmadt/end=>end?noobj{.}<=obj{*}()[cpp]
 ==>/mmadt/eq=>eq(_)[cpp]
@@ -328,10 +325,10 @@ fhatos> */mmadt/#/
 ==>/mmadt/ext/uint8=>uint8()[is(gte(0)).is(lte(255))]
 ==>/mmadt/flip=>flip(_)[cpp]
 ==>/mmadt/frame=>frame?rec<=obj{?}()[cpp]
-==>/mmadt/from=>from?obj{?}<=obj{?}(isa(/mmadt/uri),_)[cpp]
-==>/mmadt/gt=>gt(isa(/mmadt/obj))
-==>/mmadt/gte=>gte(isa(/mmadt/obj))
-==>/mmadt/inspect=>inspect(isa(/mmadt/obj))
+==>/mmadt/from=>from?obj{?}<=obj{?}(_,else(noobj))[cpp]
+==>/mmadt/gt=>gt()
+==>/mmadt/gte=>gte()
+==>/mmadt/inspect=>inspect(_)
 ==>/mmadt/inst=>[inst][_]
 ==>/mmadt/inst/::/mmadt/inspect=>inspect(_)[cpp]
 ==>/mmadt/inst/blockers=>[
@@ -346,19 +343,18 @@ fhatos> */mmadt/#/
 ==>/mmadt/int=>[int][_]
 ==>/mmadt/int/::/mmadt/as=>as(isa(/mmadt/uri))[cpp]
 ==>/mmadt/int/::/mmadt/div=>div(isa(/mmadt/int))[cpp]
-==>/mmadt/int/::/mmadt/gt=>gt(isa(/mmadt/int))[cpp]
-==>/mmadt/int/::/mmadt/gte=>gte(isa(/mmadt/int))[cpp]
+==>/mmadt/int/::/mmadt/gt=>gt(_)[cpp]
+==>/mmadt/int/::/mmadt/gte=>gte(_)[cpp]
 ==>/mmadt/int/::/mmadt/inspect=>inspect(_)[cpp]
-==>/mmadt/int/::/mmadt/lt=>lt(isa(/mmadt/int))[cpp]
-==>/mmadt/int/::/mmadt/lte=>lte(isa(/mmadt/int))[cpp]
+==>/mmadt/int/::/mmadt/lt=>lt(_)[cpp]
+==>/mmadt/int/::/mmadt/lte=>lte(_)[cpp]
 ==>/mmadt/int/::/mmadt/minus=>minus(isa(/mmadt/int))[cpp]
 ==>/mmadt/int/::/mmadt/mod=>mod(isa(/mmadt/int))[cpp]
 ==>/mmadt/int/::/mmadt/mult=>mult(isa(/mmadt/int))[cpp]
 ==>/mmadt/int/::/mmadt/neg=>neg(isa(/mmadt/int))[cpp]
 ==>/mmadt/int/::/mmadt/plus=>plus(isa(/mmadt/int))[cpp]
 ==>/mmadt/is=>is?obj{?}<=obj(_)[cpp]
-==>/mmadt/isa=>isa?obj{?}<=obj(_)[cpp]
-==>/mmadt/jump=>jump?obj{?}<=obj(isa(/mmadt/uri))[cpp]
+==>/mmadt/isa=>isa?obj{?}<=obj{?}(_)[cpp]
 ==>/mmadt/lift=>lift(_)[cpp]
 ==>/mmadt/lock=>lock(user=>_)[cpp]
 ==>/mmadt/lshift=>lshift()
@@ -372,8 +368,8 @@ fhatos> */mmadt/#/
 ==>/mmadt/lst/::/mmadt/plus=>plus(isa(/mmadt/lst))[cpp]
 ==>/mmadt/lst/::/mmadt/split=>split(isa(/mmadt/lst))[cpp]
 ==>/mmadt/lst/::/mmadt/within=>within(_)[cpp]
-==>/mmadt/lt=>lt(isa(/mmadt/obj))
-==>/mmadt/lte=>lte(isa(/mmadt/obj))
+==>/mmadt/lt=>lt()
+==>/mmadt/lte=>lte()
 ==>/mmadt/map=>map?obj{?}<=obj{?}(_)[cpp]
 ==>/mmadt/merge=>merge?obj{?}<=obj()[cpp]
 ==>/mmadt/minus=>minus(_)
@@ -391,11 +387,11 @@ fhatos> */mmadt/#/
 ==>/mmadt/real=>[real][_]
 ==>/mmadt/real/::/mmadt/as=>as(isa(/mmadt/uri))[cpp]
 ==>/mmadt/real/::/mmadt/div=>div(isa(/mmadt/real))[cpp]
-==>/mmadt/real/::/mmadt/gt=>gt(isa(/mmadt/real))[cpp]
-==>/mmadt/real/::/mmadt/gte=>gte(isa(/mmadt/real))[cpp]
+==>/mmadt/real/::/mmadt/gt=>gt(_)[cpp]
+==>/mmadt/real/::/mmadt/gte=>gte(_)[cpp]
 ==>/mmadt/real/::/mmadt/inspect=>inspect(_)[cpp]
-==>/mmadt/real/::/mmadt/lt=>lt(isa(/mmadt/real))[cpp]
-==>/mmadt/real/::/mmadt/lte=>lte(isa(/mmadt/real))[cpp]
+==>/mmadt/real/::/mmadt/lt=>lt(_)[cpp]
+==>/mmadt/real/::/mmadt/lte=>lte(_)[cpp]
 ==>/mmadt/real/::/mmadt/minus=>minus(isa(/mmadt/real))[cpp]
 ==>/mmadt/real/::/mmadt/mult=>mult(isa(/mmadt/real))[cpp]
 ==>/mmadt/real/::/mmadt/neg=>neg(isa(/mmadt/real))[cpp]
@@ -419,11 +415,11 @@ fhatos> */mmadt/#/
 ==>/mmadt/str=>[str][_]
 ==>/mmadt/str/::/mmadt/as=>as(isa(/mmadt/uri))[cpp]
 ==>/mmadt/str/::/mmadt/div=>div(isa(/mmadt/str))[cpp]
-==>/mmadt/str/::/mmadt/gt=>gt(isa(/mmadt/str))[cpp]
-==>/mmadt/str/::/mmadt/gte=>gte(isa(/mmadt/str))[cpp]
+==>/mmadt/str/::/mmadt/gt=>gt(_)[cpp]
+==>/mmadt/str/::/mmadt/gte=>gte(_)[cpp]
 ==>/mmadt/str/::/mmadt/inspect=>inspect(_)[cpp]
-==>/mmadt/str/::/mmadt/lt=>lt(isa(/mmadt/str))[cpp]
-==>/mmadt/str/::/mmadt/lte=>lte(isa(/mmadt/str))[cpp]
+==>/mmadt/str/::/mmadt/lt=>lt(_)[cpp]
+==>/mmadt/str/::/mmadt/lte=>lte(_)[cpp]
 ==>/mmadt/str/::/mmadt/merge=>merge?objs{*}<=str()[cpp]
 ==>/mmadt/str/::/mmadt/minus=>minus(isa(/mmadt/str))[cpp]
 ==>/mmadt/str/::/mmadt/mult=>mult(isa(/mmadt/str))[cpp]
@@ -435,12 +431,12 @@ fhatos> */mmadt/#/
 ==>/mmadt/uri=>[uri][_]
 ==>/mmadt/uri/::/mmadt/as=>as(isa(/mmadt/uri))[cpp]
 ==>/mmadt/uri/::/mmadt/div=>div(isa(/mmadt/uri))[cpp]
-==>/mmadt/uri/::/mmadt/gt=>gt(isa(/mmadt/uri))[cpp]
-==>/mmadt/uri/::/mmadt/gte=>gte(isa(/mmadt/uri))[cpp]
+==>/mmadt/uri/::/mmadt/gt=>gt(_)[cpp]
+==>/mmadt/uri/::/mmadt/gte=>gte(_)[cpp]
 ==>/mmadt/uri/::/mmadt/inspect=>inspect(_)[cpp]
 ==>/mmadt/uri/::/mmadt/lshift=>lshift(_)[cpp]
-==>/mmadt/uri/::/mmadt/lt=>lt(isa(/mmadt/uri))[cpp]
-==>/mmadt/uri/::/mmadt/lte=>lte(isa(/mmadt/uri))[cpp]
+==>/mmadt/uri/::/mmadt/lt=>lt(_)[cpp]
+==>/mmadt/uri/::/mmadt/lte=>lte(_)[cpp]
 ==>/mmadt/uri/::/mmadt/merge=>merge?objs{*}<=uri()[cpp]
 ==>/mmadt/uri/::/mmadt/minus=>minus(isa(/mmadt/uri))[cpp]
 ==>/mmadt/uri/::/mmadt/mult=>mult(isa(/mmadt/uri))[cpp]
@@ -472,7 +468,7 @@ An `inst` written in C++.
 [source,mmadt]
 ----
 fhatos> *int::lt
-==>lt?bool<=int(isa?noobj<=obj(/mmadt/int)[noobj])[cpp]
+==>lt?bool<=int(_)[cpp]
 ----
 
 ++++
@@ -869,7 +865,8 @@ fhatos> char['a']@a
 fhatos> char['b']@b
 ==>char['b']@b
 fhatos> @a + @b
-[ERROR] [/sys/scheduler] only inst currently supported: _
+[ERROR] [/sys/scheduler] [/sys/lang/parser] 'aa'@a is not a /mmadt/ext/char as defined by char()[merge(2).count().is(eq(1))] 
+	  thrown at inst char['a']@a => plus(char['a']@a)[cpp] [0=>char['a']@a]
 	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'@a + @b')[cpp] [code=>'@a + @b']
 fhatos> *a
 ==>char['a']@a
@@ -910,13 +907,13 @@ fhatos> nat[-30]
 fhatos> nat[12]@a
 ==>nat[12]@a
 fhatos> @a.minus(11)
-[ERROR] [/sys/scheduler] only inst currently supported: _
-	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'@a.minus(11)')[cpp] [code=>'@a.minus(11)']
+==>nat[1]@a
 fhatos> @a.minus(2)
-[ERROR] [/sys/scheduler] only inst currently supported: _
+[ERROR] [/sys/scheduler] [/sys/lang/parser] -1@a is not a /mmadt/ext/nat as defined by nat()[is(gte(0))] 
+	  thrown at inst nat[1]@a => minus(2)[cpp] [0=>2]
 	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'@a.minus(2)')[cpp] [code=>'@a.minus(2)']
 fhatos> *a
-==>nat[12]@a
+==>nat[1]@a
 ----
 
 ++++
@@ -1145,16 +1142,21 @@ a|
 [source,mmadt]
 ----
 fhatos> a?sub -> \|to(b)
-==>to?noobj<=obj(b)[noobj]
+==>a?sub
 fhatos> *a?sub
-==>a?bool<=obj(_)[cpp]
+>sub[
+==>source=>/io/console
+==>pattern=>a
+==>on_recv=>a?sub
+>]
 fhatos> *b
+==>a?sub
 fhatos> a->12
 ==>12
 fhatos> *a
 ==>12
 fhatos> *b
-==>12
+==>a?sub
 ----
 
 ++++
@@ -1269,24 +1271,26 @@ real[6.0].inspect()
 fhatos> int[6].inspect()
 >[
 ==>type=>[
-===>id=>/mmadt/noobj
-===>obj=>[noobj][_]
+===>id=>/mmadt/int
+===>obj=>[int][_]
 ===>dom=>[id=>/mmadt/obj,coeff=>[1,1]]
-===>rng=>[id=>/mmadt/noobj,coeff=>[1,1]]
+===>rng=>[id=>/mmadt/int,coeff=>[1,1]]
 =>]
 ==>value=>[
+===>obj=>6
 ===>encoding=>int32_t
 =>]
 >]
 fhatos> real[6.0].inspect()
 >[
 ==>type=>[
-===>id=>/mmadt/noobj
-===>obj=>[noobj][_]
+===>id=>/mmadt/real
+===>obj=>[real][_]
 ===>dom=>[id=>/mmadt/obj,coeff=>[1,1]]
-===>rng=>[id=>/mmadt/noobj,coeff=>[1,1]]
+===>rng=>[id=>/mmadt/real,coeff=>[1,1]]
 =>]
 ==>value=>[
+===>obj=>6.00000
 ===>encoding=>float_t
 =>]
 >]
@@ -1323,18 +1327,17 @@ fhatos> /sys/router/config/resolve/auto_prefix ->
 ==>noobj
 ==>noobj
 ==>noobj
-==>/mmadt/ext/
+==>noobj
 >]
 fhatos> a -> int8[126]                       // <2>
 ==>int8[126]
 fhatos> @a + 1
-[ERROR] [/sys/scheduler] only inst currently supported: _
-	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'@a + 1')[cpp] [code=>'@a + 1']
+==>int8[127]@a
 fhatos> @a + 1
-[ERROR] [/sys/scheduler] only inst currently supported: _
-	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'@a + 1')[cpp] [code=>'@a + 1']
+==>int8[128]@a
 fhatos> @a + 1                               // <3>
-[ERROR] [/sys/scheduler] only inst currently supported: _
+[ERROR] [/sys/scheduler] [/sys/lang/parser] 129@a is not a /mmadt/ext/int8 as defined by uint8()[is(gte(-127)).is(lte(128))] 
+	  thrown at inst int8[128]@a => plus(1)[cpp] [0=>1]
 	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'@a + 1                               // <3>')[cpp] [code=>'@a + 1                               // <3>']
 ----
 
@@ -1365,11 +1368,11 @@ fhatos> */mmadt/int/#
 ==>[int][[_]]
 ==>as?obj<=int(isa?noobj<=obj(/mmadt/uri)[noobj])[cpp]
 ==>div?int<=int(isa?noobj<=obj(/mmadt/int)[noobj])[cpp]
-==>gt?bool<=int(isa?noobj<=obj(/mmadt/int)[noobj])[cpp]
-==>gte?bool<=int(isa?noobj<=obj(/mmadt/int)[noobj])[cpp]
+==>gt?bool<=int(_)[cpp]
+==>gte?bool<=int(_)[cpp]
 ==>inspect?rec<=int(_)[cpp]
-==>lt?bool<=int(isa?noobj<=obj(/mmadt/int)[noobj])[cpp]
-==>lte?bool<=int(isa?noobj<=obj(/mmadt/int)[noobj])[cpp]
+==>lt?bool<=int(_)[cpp]
+==>lte?bool<=int(_)[cpp]
 ==>minus?int<=int(isa?noobj<=obj(/mmadt/int)[noobj])[cpp]
 ==>mod?int<=int(isa?noobj<=obj(/mmadt/int)[noobj])[cpp]
 ==>mult?int<=int(isa?noobj<=obj(/mmadt/int)[noobj])[cpp]
@@ -1547,8 +1550,7 @@ The router supports a chain `fos:frame` structures and, in this way, `fos:frame`
 [source,mmadt]
 ----
 fhatos> 34.make_bigger(a=>plus(10))[plus(*a)]
-[ERROR] [/sys/scheduler] only inst currently supported: _
-	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'34.make_bigger(a=>plus(10))[plus(*a)]')[cpp] [code=>'34.make_bigger(a=>plus(10))[plus(*a)]']
+==>88
 ----
 
 ++++
@@ -1619,7 +1621,9 @@ However, what makes
 [source,mmadt]
 ----
 fhatos> 2.rec[[is(gt(2)) => plus(2), _ => 0]]
-[ERROR] [/sys/scheduler] only inst currently supported: _
+[ERROR] [/sys/scheduler] [/mmadt/obj] /mmadt/gt?dom=/mmadt/obj&dc=1,1&rng=/mmadt/bool&rc=1,1 inst unresolved 
+	         lhs id      inst id      resolve obj     
+	  ->[/mmadt/obj] /mmadt/gt => gt()
 	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'2.rec[[is(gt(2)) => plus(2), _ => 0]]')[cpp] [code=>'2.rec[[is(gt(2)) => plus(2), _ => 0]]']
 ----
 
@@ -1643,11 +1647,15 @@ For instance, `if` is implemented with a two entry `rec`, where one entry maps t
 fhatos> /io/console/config/nest -> 0                  // <1>
 ==>0
 fhatos> {1,2,3}.[is(gt(2)) => _, _ => noobj]          // <2>
-[ERROR] [/sys/scheduler] only inst currently supported: isa(/mmadt/obj)
-	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>0,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'{1,2,3}.[is(gt(2)) => _, _ => noobj]          // <2>')[cpp] [code=>'{1,2,3}.[is(gt(2)) => _, _ => noobj]          // <2>']
+[ERROR] [/sys/scheduler] [/mmadt/obj] /mmadt/gt?dom=/mmadt/obj&dc=1,1&rng=/mmadt/bool&rc=1,1 inst unresolved 
+	         lhs id      inst id      resolve obj     
+	  ->[/mmadt/obj] /mmadt/gt => gt()
+	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true,nest=>0]]]@/io/console => eval?obj{?}<=console(code=>'{1,2,3}.[is(gt(2)) => _, _ => noobj]          // <2>')[cpp] [code=>'{1,2,3}.[is(gt(2)) => _, _ => noobj]          // <2>']
 fhatos> {1,2,3}.[is(gt(2)) => _, _ => noobj]>-        // <3>
-[ERROR] [/sys/scheduler] only inst currently supported: isa(/mmadt/obj)
-	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>0,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'{1,2,3}.[is(gt(2)) => _, _ => noobj]>-        // <3>')[cpp] [code=>'{1,2,3}.[is(gt(2)) => _, _ => noobj]>-        // <3>']
+[ERROR] [/sys/scheduler] [/mmadt/obj] /mmadt/gt?dom=/mmadt/obj&dc=1,1&rng=/mmadt/bool&rc=1,1 inst unresolved 
+	         lhs id      inst id      resolve obj     
+	  ->[/mmadt/obj] /mmadt/gt => gt()
+	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true,nest=>0]]]@/io/console => eval?obj{?}<=console(code=>'{1,2,3}.[is(gt(2)) => _, _ => noobj]>-        // <3>')[cpp] [code=>'{1,2,3}.[is(gt(2)) => _, _ => noobj]>-        // <3>']
 ----
 
 ++++
@@ -1674,24 +1682,21 @@ if-else::
 ++++
 <!-- 🐖 ./main_runner.out
 [HEADER] .if-else icon:link[link=https://en.wikipedia.org/wiki/Conditional_(computer_programming)#If%E2%80%93then(%E2%80%93else),2x,role=blue]
-{1,2,3}.[                  /
-  ?>2 => mult(-1),   /
-  _   => mult(100)]>-
+{1,2,3}-|[                 /
+  is(gt(2)) => mult(-1),   /
+  _         => mult(100)]>-
 -->
 ++++
 
 .if-else icon:link[link=https://en.wikipedia.org/wiki/Conditional_(computer_programming)#If%E2%80%93then(%E2%80%93else),2x,role=blue]
 [source,mmadt]
 ----
-fhatos> {1,2,3}.[                 
-          ?>2 => mult(-1),  
-          _   => mult(100)]>-
-[ERROR] [/sys/scheduler] only inst currently supported: _
-	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'{1,2,3}.[                 
-          ?>2 => mult(-1),  
-          _   => mult(100)]>-')[cpp] [code=>'{1,2,3}.[                 
-          ?>2 => mult(-1),  
-          _   => mult(100)]>-']
+fhatos> {1,2,3}-|[                
+          is(gt(2)) => mult(-1),  
+          _         => mult(100)]>-
+==>100
+==>200
+==>-3
 ----
 
 ++++
@@ -1705,28 +1710,23 @@ switch::
 ++++
 <!-- 🐖 ./main_runner.out
 [HEADER] .switch icon:link[link=https://en.wikipedia.org/wiki/Conditional_(computer_programming)#Case_and_switch_statements,2x,role=blue]
-{1,2,3}.[             /
-  ?=1 => mult(-1),    /
-  ?=2 => mult(0),     /
-  ?=3 => _]>-
+{1,2,3}-<[             /
+  is(eq(1)) => mult(-1),    /
+  is(eq(2)) => mult(0),     /
+  is(eq(3)) => _]>-
 -->
 ++++
 
 .switch icon:link[link=https://en.wikipedia.org/wiki/Conditional_(computer_programming)#Case_and_switch_statements,2x,role=blue]
 [source,mmadt]
 ----
-fhatos> {1,2,3}.[            
-          ?=1 => mult(-1),   
-          ?=2 => mult(0),    
-          ?=3 => _]>-
-[ERROR] [/sys/scheduler] only inst currently supported: _
-	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'{1,2,3}.[            
-          ?=1 => mult(-1),   
-          ?=2 => mult(0),    
-          ?=3 => _]>-')[cpp] [code=>'{1,2,3}.[            
-          ?=1 => mult(-1),   
-          ?=2 => mult(0),    
-          ?=3 => _]>-']
+fhatos> {1,2,3}-<[            
+          is(eq(1)) => mult(-1),   
+          is(eq(2)) => mult(0),    
+          is(eq(3)) => _]>-
+==>-1
+==>0
+==>3
 ----
 
 ++++
@@ -1899,10 +1899,22 @@ a -> age[45]
 [source,mmadt]
 ----
 fhatos> age -> \|(is(gt(0)).is(lt(120)))
-==>is?noobj<=obj(gt?noobj<=obj(0)[noobj])[noobj].is?noobj<=obj(lt?noobj<=obj(120)[noobj])[noobj]
+[ERROR] [/sys/scheduler] [/mmadt/int] 0 accessed as uri
+	  thrown at inst age => gt(0) [0=>0]
+	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'age -> \|(is(gt(0)).is(lt(120)))')[cpp] [code=>'age -> \|(is(gt(0)).is(lt(120)))']
 fhatos> a -> age[45]
-==>age[45]
+[ERROR] [/sys/scheduler] [/sys/lang/parser] age is an undefined type
+	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'a -> age[45]')[cpp] [code=>'a -> age[45]']
 fhatos> *a.inspect()
+[ERROR] [/sys/scheduler] [/mmadt/obj] /mmadt/inspect?dom=/mmadt/obj&dc=1,1&rng=/mmadt/rec&rc=1,1 inst unresolved 
+	         lhs id      inst id           resolve obj           
+	  ->[/mmadt/obj] /mmadt/inspect => inspect(_)
+	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'*a.inspect()')[cpp] [code=>'*a.inspect()']
+fhatos> @a.inspect()
+[ERROR] [/sys/scheduler] [/mmadt/obj] /mmadt/inspect?dom=/mmadt/obj&dc=1,1&rng=/mmadt/rec&rc=1,1 inst unresolved 
+	         lhs id      inst id           resolve obj           
+	  ->[/mmadt/obj] /mmadt/inspect => inspect(_)
+	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'@a.inspect()')[cpp] [code=>'@a.inspect()']
 ----
 
 ++++
@@ -1918,24 +1930,32 @@ fhatos> *a.inspect()
 [source,mmadt]
 ----
 fhatos> a?sub -> |print(_)
-==>print?noobj<=obj(_)[noobj]
+[INFO]  [/io/console] thread spawned: inst()[cpp]
+a?suba?sub==>a?sub
 fhatos> a -> 12
 ==>12
-12fhatos> @a.inspect()
+fhatos> @a.inspect()
 >[
 ==>type=>[
-===>id=>/mmadt/noobj
-===>obj=>[noobj][_]
+===>id=>/mmadt/int
+===>obj=>[int][_]
 ===>dom=>[id=>/mmadt/obj,coeff=>[1,1]]
-===>rng=>[id=>/mmadt/noobj,coeff=>[1,1]]
+===>rng=>[id=>/mmadt/int,coeff=>[1,1]]
 =>]
 ==>value=>[
+===>id=>a
+===>obj=>12
 ===>encoding=>int32_t
 =>]
+==>sub=>[
+===>source=>/io/console
+===>pattern=>a
+===>on_recv=>a?sub
+=>]
 >]
-12@afhatos> @a.plus(1)
+fhatos> @a.plus(1)
 ==>13@a
-13@afhatos> @a.plus(1).plus(1)
+fhatos> @a.plus(1).plus(1)
 ==>15@a
 ----
 
@@ -1965,18 +1985,19 @@ For instance, if a natural number stem:[\mathbb{N}] is any non-negative number, 
 [source,mmadt]
 ----
 fhatos> /type/int/nat -> |is(gt(0))
-[ERROR] [/sys/router] no mounted structure for /type/int/nat  
-==>is?noobj<=obj(gt?noobj<=obj(0)[noobj])[noobj]
+[ERROR] [/sys/scheduler] [/mmadt/int] 0 accessed as uri
+	  thrown at inst /type/int/nat => gt(0) [0=>0]
+	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'/type/int/nat -> |is(gt(0))')[cpp] [code=>'/type/int/nat -> |is(gt(0))']
 fhatos> nat[6]
 ==>nat[6]
 fhatos> nat[-6]
 [ERROR] [/sys/scheduler] [/sys/lang/parser] -6 is not a /mmadt/ext/nat as defined by nat()[is(gte(0))] 
 	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'nat[-6]')[cpp] [code=>'nat[-6]']
 fhatos> nat[3].plus(2)
-[ERROR] [/sys/scheduler] only inst currently supported: _
-	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'nat[3].plus(2)')[cpp] [code=>'nat[3].plus(2)']
+==>nat[5]
 fhatos> nat[3].mult(-2)
-[ERROR] [/sys/scheduler] only inst currently supported: _
+[ERROR] [/sys/scheduler] [/sys/lang/parser] -6 is not a /mmadt/ext/nat as defined by nat()[is(gte(0))] 
+	  thrown at inst nat[3] => mult(-2)[cpp] [0=>-2]
 	  thrown at inst console[[halt=>false,delay=>nat[0],loop=>inst()[cpp],config=>[nest=>2,prompt=>'fhatos> ',strict=>false,log=>INFO,stack_size=>24288,stack_trace=>true]]]@/io/console => eval?obj{?}<=console(code=>'nat[3].mult(-2)')[cpp] [code=>'nat[3].mult(-2)']
 ----
 
@@ -2033,6 +2054,13 @@ fhatos> /io/console/config/nest->3
 fhatos> */sys/router/#/
 >[
 ==>/sys/router=>[
+===>frame=>[rec][_]
+===>config=>[
+====>resolve=>[namespace=>[:=>/mmadt/,fos:=>/fos/],auto_prefix=>[,/mmadt/,/mmadt/ext/,/fos/,/fos/sys/,/fos/io/,/fos/sensor/,/fos/ui/,/fos/util/,/sys/],query=>[write=>[lock=>to_do]],default_config=>[query=>[write=>[sub=>noobj]]]]
+==>]
+===>query=>[
+====>write=>[lock=>lock?obj{?}<=obj{?}()[cpp],sub=>sub?obj{?}<=obj()[cpp]]
+==>]
 ===>structure=>[
 ====>/sys/#
 ====>/mnt/#
@@ -2044,13 +2072,6 @@ fhatos> */sys/router/#/
 ====>/disk/#
 ====>/shared/#
 ====>/bus/#
-==>]
-===>frame=>[rec][_]
-===>config=>[
-====>resolve=>[namespace=>[:=>/mmadt/,fos:=>/fos/],auto_prefix=>[,/mmadt/,/mmadt/ext/,/fos/,/fos/sys/,/fos/io/,/fos/sensor/,/fos/ui/,/fos/util/,/sys/],query=>[write=>[lock=>to_do]],default_config=>[query=>[write=>[sub=>noobj]]]]
-==>]
-===>query=>[
-====>write=>[lock=>lock?obj{?}<=obj{?}()[cpp],sub=>sub?obj{?}<=obj()[cpp]]
 ==>]
 =>]@/sys/router
 >]
@@ -2095,13 +2116,17 @@ fhatos> a -> 'snowbutt'            // <1>
 fhatos> *a                         // <2>
 ==>'snowbutt'
 fhatos> a?sub -> |to(b)            // <3>
-==>to?noobj<=obj(b)[noobj]
+==>a?sub
 fhatos> *a?sub                     // <4>
-==>a?bool<=obj(_)[cpp]
+>sub[
+==>source=>/io/console
+==>pattern=>a
+==>on_recv=>a?sub
+>]
 fhatos> a -> 'meangirl'            // <5>
 ==>'meangirl'
 fhatos> *b                         // <6>
-==>'meangirl'
+==>a?sub
 ----
 
 ++++
